<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.Detalles">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="@string/titulo_placeholder" />

                <ImageView
                    android:id="@+id/ivDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <Button
                    android:id="@+id/btnComprar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/boton_comprar" />

                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    tools:text="@string/lorem_ipsum_3" />
            </LinearLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/pbConexion"
            style="?android:attr/progressBarStyle"
            android:layout_width="97dp"
            android:layout_height="89dp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>